CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(ncnnEngineModule)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON) 

SET(NCNN_MODULE_PRIVATE_INCLUDES
    ${OpenCV_INCLUDE_DIRS}
    ${NCNN_INCLUDE_DIR}
)

SET(NCNN_MODULE_LINK_LIBS
    encrypt::encrypt
    logger::logger
    ${OpenMP_CXX_FLAGS}
    ${NCNN_LIBS}
    ${OpenCV_LIBS}
)

SET(NCNN_MODULE_LIBS ${NCNN_MODULE_LINK_LIBS} PARENT_SCOPE)

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

MESSAGE(STATUS "Inference engine type is ONNXRuntime, preparing object files.")

ADD_LIBRARY(ai_ncnn_module OBJECT
    ${CURRENT_DIR_SRCS}
)

TARGET_INCLUDE_DIRECTORIES(ai_ncnn_module
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> 
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..> 
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../api> 
    PRIVATE
        ${NCNN_MODULE_PRIVATE_INCLUDES}
)

TARGET_LINK_LIBRARIES(ai_ncnn_module PRIVATE
    encrypt::encrypt
    logger::logger
)
